<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg">
<ImageView
    android:layout_width="155dp"
    android:layout_height="155dp"
    app:srcCompat="@drawable/logo1"
    android:layout_marginTop="70dp"
    />
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:gravity="center"
        android:layout_height="50dp"

        android:hint="@string/username"
        android:drawableLeft="@drawable/icc2"
        android:background="@drawable/et_style"
        android:textColor="#262626"
        android:textColorHint="#262626"

        android:layout_marginTop="100dp"/>


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/lockE"
        android:paddingLeft="5dp"
        android:background="@drawable/et_style"
        android:textColor="#262626"
        android:textColorHint="#262626"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:background="@drawable/et_style"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registrated"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:text="@string/lineslash"
            android:textColor="#fff"
            />
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:text="@string/register"
            android:textColor="#fff"
            />
    </LinearLayout>


</LinearLayout>